--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "build": "node ./node_modules/webpack/bin/webpack"
+    "webpack": "node ./node_modules/webpack/bin/webpack"
   },
   "repository": {
     "type": "git",
